app/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: ocp-review-carbon-public
  labels:
    app: ocp-mastery-carbon
    env: test
spec:
  host: carbon.apps.sno.yamlwrangler.com
  wildcardPolicy: None
  to:
    kind: Service
    name: ocp-mastery-carbon
  port:
    targetPort: 8080
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
